# multiplay-rs

./: Cargo.toml
admin/: package-lock.json  package.json
admin/components/: Button.tsx  Layout.tsx  Ping.tsx  SideBar.tsx  Table.tsx  TableRow.tsx
admin/hooks/: useConnections.ts  useMockConnections.ts  useMockServerData.ts
admin/lib/: serverData.ts
admin/pages/: _app.tsx  index.tsx
admin/styles/: _fonts.scss  _reset.scss  _theme.scss  _typography.scss  main.scss
admin/styles/components/: _Button.scss  _Layout.scss  _Ping.scss  _SideBar.scss  _Table.scss
admin/types/: connection.ts
client/: Cargo.toml
client/examples/: echo.rs
client/src/: client.rs  lib.rs
demo/: index.html
lib/: Cargo.toml
lib/examples/: echo.rs  server.rs
lib/src/: assets.rs  lib.rs
lib/src/rtc/: mod.rs  server.rs
lib/src/rtc/client/: mod.rs  native.rs
lib/src/rtc/client/web/: client.rs  mod.rs
lib/src/rtc/transport/: mod.rs  websockets.rs
lib/src/test/: basic.rs  helpers.rs
server/: Cargo.toml
server/examples/: server.rs
server/src/: assets.rs
server/src/rtc/: mod.rs  protocol.rs  serve.rs  server.rs  session.rs  sessions.rs  websockets.rs
server/src/rtc/api/: sessions.rs
server/src/rtc/protocol/: client.rs  common.rs  server.rs
server/src/rtc/transport/: websockets.rs
server/src/test/: helpers.rs  mod.rs  websockets.rs
