[package]
name = "multiplay-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
warp = "0.3.1"
webrtc-unreliable = "0.5.1"

flume = "0.10.9"
serde_cbor = "0.11.2"

bimap = "0.6.1"
futures = "0.3.17"
futures-util = "0.3.17"

rand = "0.8.4"
log = "0.4"

async-trait = "0.1.51"
anyhow = "1.0.51"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.async-std]
version = "1.10.0"
features = ["attributes", "unstable"]

[dev-dependencies]
pretty_env_logger = { version = "0.4.0" }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0.68"
ntest = "0.7.3"
regex = "1.5.4"